
syntax = "proto3";

option csharp_namespace = "Retailer.BlazorServer.GrpcClient.Protos";

package customer;

service Customer{
	rpc GetCustomerInfo (CustomerLookUpModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
	rpc AddCustomer (CustomerModel) returns (CustomerAddResponse);
	rpc DeleteCustomer (CustomerLookUpModel) returns (CustomerDeleteResponse);
}


message CustomerDeleteResponse{
	bool isDeleted = 1;
}


message CustomerAddResponse{
	bool isAdded = 1;
}


message NewCustomerRequest{

}

message CustomerLookUpModel{
	int32 customerId = 1;
}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;	
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
	int32 id = 6;
}
